<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools">
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="2dp"
        card_view:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="@string/weather_in_city_title"
                    android:id="@+id/weather_in_city_text"/>
                <ImageView
                    android:id="@+id/remove_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="60"
                    android:src="@drawable/ic_delete_black_24dp"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/weather_icon"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/temperature_text"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/weather_condition_text"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_title"
                    android:id="@+id/wind_title_text"
                    android:layout_weight="2"
                    android:textColor="@android:color/holo_orange_dark" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/wind_text"
                    android:layout_weight="3" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cloudiness_title"
                    android:id="@+id/cloudiness_title_text"
                    android:layout_weight="2"
                    android:textColor="@android:color/holo_orange_dark" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/cloudiness_text"
                    android:layout_weight="3" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure_title"
                    android:id="@+id/pressure_title_text"
                    android:layout_weight="2"
                    android:textColor="@android:color/holo_orange_dark" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/pressure_text"
                    android:layout_weight="3" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity_title"
                    android:id="@+id/humidity_title_text"
                    android:layout_weight="2"
                    android:textColor="@android:color/holo_orange_dark" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/humidity_text"
                    android:layout_weight="3" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rain_title"
                    android:id="@+id/rain_title_text"
                    android:layout_weight="2" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/rain_text"
                    android:layout_weight="3" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/snow_title"
                    android:id="@+id/snow_title_text"
                    android:layout_weight="2" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/snow_text"
                    android:layout_weight="3" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sunrise_title"
                    android:id="@+id/sunrise_title_text"
                    android:layout_weight="2"
                    android:textColor="@android:color/holo_orange_dark" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/sunrise_text"
                    android:layout_weight="3" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sunset_title"
                    android:id="@+id/sunset_title_text"
                    android:layout_weight="2"
                    android:textColor="@android:color/holo_orange_dark" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/sunset_text"
                    android:layout_weight="3" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/geo_coordinates_title"
                    android:id="@+id/geo_coordinates_title_text"
                    android:layout_weight="2"
                    android:textColor="@android:color/holo_orange_dark" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/geo_coordinates_text"
                    android:layout_weight="3" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/last_updated_title_text"
                    android:layout_weight="2"
                    android:textColor="@android:color/holo_orange_dark" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/last_updated_text"
                    android:layout_weight="3"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>